--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -5,7 +5,8 @@
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true
+    "strict": true,
+    "noUnusedLocals": true, // Add this line to catch unused local variables
   },
   "include": ["vite.config.ts"]
 }
